feat: Blog post

--- a/_posts/2024-10-16-sound.md
+++ b/_posts/2024-10-16-sound.md
@@ -2,7 +2,8 @@
 layout: post
 title: Square wave to the dome
 date: 2024-10-16
-categories: gamedev
+tags:
+  - gamedev
 ---
 
 Nothing quite as sobering as taking a 440 hz square wave right to the dome.
